--- a/index.html
+++ b/index.html
@@ -5,24 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
 
   <title>Frontend Mentor | Bookmark landing page</title>
 </head>
 <body>
+  <nav class="nav">
+    <div class="nav__measure">
+    </div>
+    <div class="nav__container">
+
+      <img class="nav__logo"  src="/images/logo-bookmark.svg" alt="logo bookmark"/>
+      <img class="nav__menu-icon" src="images/icon-hamburger.svg" alt="icon hamburger menu">
+    </div>
+  </nav>
+  <header class="header">
+    <div class="header__image-container">
+
+      <img class="header__image" src="/images/illustration-hero.svg" alt="application illustration ">
+      <div class="header__bg-graphic"></div>
+      <div class="header__measure"></div>
+    </div>
+<div class="header__text-container">
+  <h1 class="header__title">A Simple Bookmark Manager</h1>
+  <h3 class="header__desc">A clean and simple interface to organize your favourite websites. Open a new 
+    browser tab and see your sites load instantly. Try it for free.</h3>
+</div>
+<div class="header__button-container">
+  <button class="header__button header__button--primary">Get it on Chrome</button>
+  <button class="header__button header__button--secondary">Get it on Firefox</button>
+</div>
+  </header>
 
   Features
   Pricing
   Contact
   Login
 
-  A Simple Bookmark Manager
+ 
 
-  A clean and simple interface to organize your favourite websites. Open a new 
-  browser tab and see your sites load instantly. Try it for free.
 
-  Get it on Chrome
-  Get it on Firefox
+
+  
+  
 
   Features
 
