adjust header image size and position

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
       <img class="header__image" src="/images/illustration-hero.svg" alt="application illustration ">
       <div class="header__bg-graphic"></div>
-      <div class="header__measure"></div>
+      <div class="header__measure-right"></div>
+      <div class="header__measure-left"></div>
     </div>
 <div class="header__text-container">
   <h1 class="header__title">A Simple Bookmark Manager</h1>
