adjust hedare image size

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <div class="header__image-container">
 
       <img class="header__image" src="/images/illustration-hero.svg" alt="application illustration ">
-      <div class="header__bg-graphic"></div>
+      <div class="header__oval-graphic"></div>
       <div class="header__measure-right"></div>
       <div class="header__measure-left"></div>
+      <div class="header__measure-image"></div>
+      <div class="header__measure-bottom"></div>
     </div>
 <div class="header__text-container">
   <h1 class="header__title">A Simple Bookmark Manager</h1>
