adjust header title and description

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <nav class="nav">
-    <div class="nav__measure">
-    </div>
+    <!-- <div class="nav__measure">
+    </div> -->
     <div class="nav__container">
 
       <img class="nav__logo"  src="/images/logo-bookmark.svg" alt="logo bookmark"/>
@@ -26,10 +26,10 @@
 
       <img class="header__image" src="/images/illustration-hero.svg" alt="application illustration ">
       <div class="header__oval-graphic"></div>
-      <div class="header__measure-right"></div>
+      <!-- <div class="header__measure-right"></div>
       <div class="header__measure-left"></div>
       <div class="header__measure-image"></div>
-      <div class="header__measure-bottom"></div>
+      <div class="header__measure-bottom"></div> -->
     </div>
 <div class="header__text-container">
   <h1 class="header__title">A Simple Bookmark Manager</h1>
