--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
       <div class="header__measure-image"></div>
       <div class="header__measure-bottom"></div> -->
     </div>
-<div class="header__text-container">
-  <h1 class="header__title">A Simple Bookmark Manager</h1>
-  <h3 class="header__desc">A clean and simple interface to organize your favourite websites. Open a new 
-    browser tab and see your sites load instantly. Try it for free.</h3>
-</div>
-<div class="header__button-container">
-  <button class="header__button header__button--primary">Get it on Chrome</button>
-  <button class="header__button header__button--secondary">Get it on Firefox</button>
-</div>
+    <div class="header__text-and-buttons-container">
+      <h1 class="header__title">A Simple Bookmark Manager</h1>
+      <h3 class="header__desc">A clean and simple interface to organize your favourite websites. Open a new 
+      browser tab and see your sites load instantly. Try it for free.</h3>
+      <div class="header__buttons-wrapper">
+        <button class="header__button header__button--primary">Get it on Chrome</button>
+        <button class="header__button header__button--secondary">Get it on Firefox</button>
+      </div>
+    </div>
   </header>
 
   Features
