--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h3 class="header__desc">A clean and simple interface to organize your favourite websites. Open a new 
       browser tab and see your sites load instantly. Try it for free.</h3>
       <div class="header__buttons-wrapper">
-        <button class="header__button header__button--primary">Get it on Chrome</button>
-        <button class="header__button header__button--secondary">Get it on Firefox</button>
+        <button class="button button--primary">Get it on Chrome</button>
+        <button class="button button--secondary">Get it on Firefox</button>
       </div>
     </div>
   </header>
