--- a/index.html
+++ b/index.html
@@ -33,27 +33,30 @@
       </div>
     </div>
   </header>
+  <section class="features">
+    <div class="features__header">
+
+      <h2 class="features__title">Features</h2>
+      <div class="features__description">Our aim is to make it quick and easy for you to access your favourite websites. 
+        Your bookmarks sync between your devices so you can access them on the go.</div>
+      </div>
+      <div class="features__buttons-container">
+        <button class="features__button" type="button">Simple Bookmarking
+          <div class="features__button-underscore"></div>
+        </button>
+        <button class="features__button" type="button">Speedy Searching
+          <div class="features__button-underscore"></div>
+        </button>
+        <button class="features__button" type="button">Easy Sharing
+          <div class="features__button-underscore"></div>
+        </button>
+      </div>
+  </section>
 
   Features
   Pricing
   Contact
   Login
-
- 
-
-
-
-  
-  
-
-  Features
-
-  Our aim is to make it quick and easy for you to access your favourite websites. 
-  Your bookmarks sync between your devices so you can access them on the go.
-
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
 
   Bookmark in one click
 
